# dutch-location-matcher

./: .gitignore  Makefile  README.md  location_matcher.py  location_matcher.test.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  test_location_matcher.py
rules/: patterns.jsonl
src/nl_matcher/: __init__.py  location_matcher.py  patterns.py  tfidf.py
src/nlmatcher/: __init__.py
tests/: test_location_matcher.py
