[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-matcher"
version = "0.0.1"
authors = [
  { name="Diego Da'Silva", email="smartcrashomg@gmail.com" },
]
description = "A simple library to match locations in text using SpaCy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/smartcrash/nlmatcher"
Issues = "https://github.com/smartcrash/nlmatcher/issues"
